--- a/style.css
+++ b/style.css
@@ -1,194 +1,203 @@
     /* Define colors for each voice trigger */
-        .note-mel {
-            color: #ff0000;
-        }
+    .note-mel {
+        color: #ff0000;
+    }
 
-        /* Light red for "měl bych" */
-        .note-musi {
-            color: #ce00ff;
-        }
+    /* Light red for "měl bych" */
+    .note-musi {
+        color: #ce00ff;
+    }
 
-        /* Light blue for "musím" */
-        .note-mela {
-            color: #0000ff;
-        }
+    /* Light blue for "musím" */
+    .note-mela {
+        color: #0000ff;
+    }
 
-        /* Light green for "měla bych" */
-        .note-musime {
-            color: #000000;
-        }
+    /* Light green for "měla bych" */
+    .note-musime {
+        color: #000000;
+    }
 
-        /* Light yellow for "musíme" */
-        .note-melibysme {
-            color: #bf6300;
-        }
+    /* Light yellow for "musíme" */
+    .note-melibysme {
+        color: #bf6300;
+    }
 
-        /* Light orange for "měli bysme" */
-        .note-melibychom {
-            color: #0099ff;
-        }
+    /* Light orange for "měli bysme" */
+    .note-melibychom {
+        color: #0099ff;
+    }
 
-        * {
-            font-family: "Montserrat", sans-serif;
-            font-size: 1.5vw;
-            /* Font size scales with the viewport width */
-        }
+    * {
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.5vw;
+        /* Font size scales with the viewport width */
+    }
 
-        body {
-            margin: 0;
-            padding: 0;
-        }
+    body {
+        margin: 0;
+        padding: 0;
+    }
 
-        button {
-            cursor: pointer;
-            border-radius: 0.5vw;
-            border: 0.1vw solid currentColor;
-            padding: 0.2vw;
-            /* Font size for buttons */
-            background-color: transparent;
-        }
+    button {
+        cursor: pointer;
+        border-radius: 0.5vw;
+        border: 0.1vw solid currentColor;
+        padding: 0.2vw;
+        /* Font size for buttons */
+        background-color: transparent;
+    }
 
-        .add-trigger {
-            color: #bf6300;
-        }
+    .add-trigger {
+        color: #bf6300;
+    }
 
-        .add-trigger:hover {
-            background-color: #f0f0f0;
-        }
+    .add-trigger:hover {
+        background-color: #f0f0f0;
+    }
 
-        .note {
-            border: 0.1vw solid #ccc;
-            border-bottom: 0.1vw solid blue;
-            border-radius: 0.8vw;
-            background-color: #ffffff;
-            min-height: 5vh;
-            /* Minimum height */
-            overflow-y: auto;
-            max-height: 30vh;
-            /* Maximum height */
-        }
+    .note {
+        border: 0.1vw solid #ccc;
+        border-bottom: 0.1vw solid blue;
+        border-radius: 0.8vw;
+        background-color: #ffffff;
+        min-height: 5vh;
+        /* Minimum height */
+        overflow-y: auto;
+        max-height: 30vh;
+        /* Maximum height */
+    }
 
-        .chevron {
-            width: 2vw;
-            height: 2vw;
-        }
+    .chevron {
+        width: 2vw;
+        height: 2vw;
+    }
 
-        .controls {
-            z-index: 9;
-            display: inline-flex;
-            align-items: center;
-        }
+    .controls {
+        z-index: 9;
+        display: inline-flex;
+        align-items: center;
+    }
 
-        .single {
+    .single {
 
-            position: relative;
-            flex-wrap: wrap;
-            display: flex;
-            border-bottom: 0.001vh solid #9198e552;
-        }
+        position: relative;
+        flex-wrap: wrap;
+        display: flex;
+        border-bottom: 0.001vh solid #9198e552;
+    }
 
-        .delete {
-            position: absolute;
-            top: 0;
-            color: red;
-            right: 0vw;
-            border: 0px;
-            padding:0px;
-            font-size: 2vw;
-            transform: translateY(-1vh);
-        }
+    .delete {
+        position: absolute;
+        top: 0;
+        color: red;
+        right: 0vw;
+        border: 0px;
+        padding: 0px;
+        font-size: 2vw;
+        transform: translateY(-1vh);
+    }
 
-        .delete::after {
-            content: "\1F5D1";
-        }
-.inline-flex div {
-margin-right: 1vw;}
-        .single:hover::after {
-            content: attr(data-time);
-             right: 4vw;
-             /* Smaller font size for hover info */
-            color: black;
-            position: absolute;
-             right: 2vw;
-             transform: translateY(0vh);
-        }
+    .delete::after {
+        content: "\1F5D1";
+    }
 
-        .single::before {
-            content: attr(data-trigger);
-            padding-right: 0.5vw;
-            /* Right padding */
-        }
+    .inline-flex div {
+        margin-right: 1vw;
+    }
 
-        .paper {
-            margin: 1vw;
-            box-shadow: 0.2vw 0.2vw 0.9vw rgba(0, 0, 0, 0.3);
-            background-color: #fdfde8;
-            border-radius: 0.5vw;
-            border: 0.1vw solid #ccc;
-            position: relative;
-        }
+    .single:hover::after {
+        content: attr(data-time);
+        right: 4vw;
+        /* Smaller font size for hover info */
+        color: black;
+        position: absolute;
+        right: 2vw;
+        transform: translateY(0vh);
+    }
 
-        .sheet {
-            background-color: #fdfde8;
-          /*  background: repeating-linear-gradient(#fdfde8, #fdfde8 1.7vw, #9198e5 1.8vw, #9198e5 1.81vw); */
+    .single::before {
+        content: attr(data-trigger);
+        padding-right: 0.5vw;
+        /* Right padding */
+    }
 
-            min-height: 25vh;
-        }
+    .paper {
+        margin: 1vw;
+        box-shadow: 0.2vw 0.2vw 0.9vw rgba(0, 0, 0, 0.3);
+        background-color: #fdfde8;
+        border-radius: 0.5vw;
+        border: 0.1vw solid #ccc;
+        position: relative;
+    }
 
-        .df {
-            display: inline-flex;
-            flex-direction: row;
-            align-content: center;
-            flex-wrap: nowrap;
-            align-items: center;
-            width: -webkit-fill-available;
-            justify-content: space-between;
-            margin-bottom: 2vh;
-        }
-        
+    .sheet {
+        background-color: #fdfde8;
+        /*  background: repeating-linear-gradient(#fdfde8, #fdfde8 1.7vw, #9198e5 1.8vw, #9198e5 1.81vw); */
 
-        #currentDate {}
+        min-height: 25vh;
+    }
 
-        .center {
-            text-align: center;
-            /* Center text font size */
-            font-weight: bold;
-        }
+    .df {
+        display: inline-flex;
+        flex-direction: row;
+        align-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        width: -webkit-fill-available;
+        justify-content: space-between;
+        margin-bottom: 2vh;
+    }
 
-        #manualNoteInput {
-            background: transparent;
-            border: 0;
-            /* Input font size /
+
+    #currentDate {}
+
+    .center {
+        text-align: center;
+        /* Center text font size */
+        font-weight: bold;
+    }
+
+    #manualNoteInput {
+        background: transparent;
+        border: 0;
+        /* Input font size /
             padding-left: 1vw; / Left padding /
             line-height: 1.5vw; / Line height for better readability */
-        }
+    }
 
-        .bottom {}
+    .bottom {}
 
-        .inline-flex {
-            display: inline-flex;
-        }
+    .inline-flex {
+        display: inline-flex;
+    }
 
-        .inline-flex div {
-            /* Right padding */
-        }
+    .inline-flex div {
+        /* Right padding */
+    }
 
-        .addnote {
-            display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-        }
-        .shm { border-radius: 0.5vw;
+    .addnote {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
+
+    .shm {
+        border-radius: 0.5vw;
         padding: 2%;
-        background: #fdfde8 ;
+        background: #fdfde8;
         padding-bottom: 6vh;
-        }
-        .download {color:blue;
+    }
+
+    .download {
+        color: blue;
         position: absolute;
-    bottom:2vh;right:2vh;} 
-    #listeningStatus  {
+        bottom: 2vh; 
+    }
+
+    #listeningStatus {
         position: absolute;
-    bottom:2vh;left:2vh;
+        bottom: 2vh; 
         margin-top: 20px;
         font-weight: bold;
     }
