--- a/style.css
+++ b/style.css
@@ -194,7 +194,8 @@
         color: blue;
         position: absolute;
         bottom: 2vh; 
-        right:0px;
+         bottom:2vh;
+    right:2vh;
     }
 
     #listeningStatus {
