--- a/style.css
+++ b/style.css
@@ -1,30 +1,36 @@
     /* Define colors for each voice trigger */
-    .note-mel {
+    .note-mel:before {
+        content:"-";
         color: #ff0000;
     }
 
     /* Light red for "měl bych" */
     .note-musi {
+          content:"-";
         color: #ce00ff;
     }
 
     /* Light blue for "musím" */
     .note-mela {
+          content:"-";
         color: #0000ff;
     }
 
     /* Light green for "měla bych" */
     .note-musime {
+          content:"-";
         color: #000000;
     }
 
     /* Light yellow for "musíme" */
     .note-melibysme {
+          content:"-";
         color: #bf6300;
     }
 
     /* Light orange for "měli bysme" */
     .note-melibychom {
+          content:"-";
         color: #0099ff;
     }
 
