--- a/style.css
+++ b/style.css
@@ -28,18 +28,24 @@
     }
 
     .sheet .note-mel { 
-    border-right: 5px solid #ff0000;
+    border-right: 5px solid #ffd000;
     }
 
+    .inline-flex .note-mel {
+        background:#ffd000;
+        color:#ffd000;
+    }
     /* Light red for "měl bych" */
     .sheet .note-musi {
     border-right: 5px solid #ce00ff; 
     }
 .inline-flex .note-musi {
     background:#ce00ff; 
+    color:#ce00ff; 
 }
 .inline-flex .note-mela {
     background:#ff0000; 
+    color:#ff0000;
 }
     /* Light blue for "musím" */
     .sheet .note-mela { 
@@ -48,6 +54,7 @@
 
 .inline-flex .note-musime  {
     background:#000000;
+    color:#000000;
 }
     /* Light green for "měla bych" */
     .sheet .note-musime {
@@ -60,6 +67,7 @@
     border-right: 5px  solid #bf6300; 
     }
 .inline-flex .note-melibysme  {
+    color:#bf6300;
     background:#bf6300; 
 }
 
@@ -69,6 +77,7 @@
     }
   .inline-flex .note-melibychom  {
     background:#0099ff;
+    color:#0099ff; 
 }
 
 
