--- a/style.css
+++ b/style.css
@@ -139,8 +139,8 @@ input:focus,.sngle:focus {
         right: 0vw;
         border: 0px;
         padding: 0px; 
-       font-size:1.5vh;
-        transform: translateY(-1vh);
+       font-size:1.5vw;
+        
     }
 
     .delete::after {
