--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
         margin: 0;
         padding: 0;
     }
-input:focus,.input:factive,single:focus,.single:active {
+input:focus,input:active,input:focus-visible,.single:focus-visible,.single:focus,.single:active {
    outline:0;
    border-bottom:1px solid currentColor;
 }
