--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@
         padding: 0;
     }
 span#status {
-    background: currentColor;
-    width: 1vw;
-    height: 1vw;
+background: transparent;
+     height: 1vw;
     display: block;
+    padding: 0.2vw;
+    font-size: 0.8vw;
     overflow: hidden;
     border-radius: 1vw;
     box-shadow: 0 0 8px 2px currentColor;
