--- a/style.css
+++ b/style.css
@@ -172,8 +172,8 @@ input:focus, input:active, input:focus-visible, .single:focus-visible, .single:f
 }
 
 #listeningStatus {
-    position: absolute;
-    bottom: 2vh;
+    position: fixed;
+    top: 4vh;
     margin-top: 20px;
     font-weight: bold;
 }
@@ -275,8 +275,9 @@ input:focus, input:active, input:focus-visible, .single:focus-visible, .single:f
 }
 
 .inline-flex div {
-
+    text-align: center;
     margin-right: 0.2vw;
+    transition: all 0.5s linear;
     width: 1.2vw;
     padding: 0.2vw;
     display: block;
@@ -288,7 +289,7 @@ input:focus, input:active, input:focus-visible, .single:focus-visible, .single:f
 
 .inline-flex div:hover {
     transition: all 0.5s linear;
-    width: fit-content;
+    width: 8vw;
     background: transparent;
     border: 1px solid currentColor;
     box-shadow: 0.2vw 0.2vw 0.9vw currentColor;
