--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ span#status {
 #listeningStatus {
    
     border: 2px solid currentColor;
-    display: block;
+    
     transition: all 0.5s linear;
     padding: 0.4vw;
     font-size: 1vw;
@@ -98,11 +98,12 @@ color:#9198e5;
 .single:hover::after {
     content: attr(data-time);
 
-    color: black;
+  
     position: absolute;
     right: 1.5vw;
     font-size: 1vw;
     transform: translateY(1vh);
+      color:#9198e5;
 }
 
 .single::before {
