--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 span#status {
     
     transition: all 0.5s linear; 
-    font-size: 1vw;width:4vw;
+    font-size: 1vw;width:8vw;display:block;
 }
 #listeningStatus {
    
