--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ color:#9198e5;
 .add-trigger {
     width:1.2VW;
 /* Define colors for each voice trigger */
-
+}
 
 .sheet .note-mel {
     border-right: 0.2vw solid #ffd000;
