--- a/style.css
+++ b/style.css
@@ -89,22 +89,14 @@ input:focus, input:active, input:focus-visible, .single:focus-visible, .single:f
 }
 
 
-.single:hover::after {
+.single:hover::before {
     content: attr(data-time);
 
   
-    position: absolute;
-    right: 1.5vw;
-    font-size: 1vw;
-    transform: translateY(1vh);
+    font-size: 1vw; 
       color:#9198e5;
 }
-
-.single::before {
-    content: attr(data-trigger);
-    padding-right: 0.5vw;
-    /* Right padding */ 
-}
+ 
 
 .paper {
     
