--- a/style.css
+++ b/style.css
@@ -91,7 +91,9 @@ input:focus, input:active, input:focus-visible, .single:focus-visible, .single:f
 
 .single:hover::before {
     content: attr(data-time);
-
+position:absolute;
+    left:0px;
+    display:block;
   
     font-size: 1vw; 
       color:#9198e5;
