--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ input:focus, input:active, input:focus-visible, .single:focus-visible, .single:f
 
 
 .single:hover::before {
-    content: attr(data-time);
+    content: attr(data-datetime);
 position:absolute;
     left:0px;
     display:block;
